objects/Customer_Information_Object__c/Customer_Information_Object__c.object-meta.xml
<CustomObject>
    <label>Customer Information Object</label>
    <nameField>
        <label>Customer Information Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Information Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>