objects/Customer_Information_Object__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Customer&apos;s street address.</description>
    <label>Address</label>
    <length>250</length>
    <type>Text</type>
</CustomField>