objects/Customer_Information_Object__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Customer&apos;s email address.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>