objects/Customer_Information_Object__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Customer&apos;s last name.</description>
    <label>Last Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>