objects/Customer_Information_Object__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Customer&apos;s phone number.</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>