objects/Customer_Information_Object__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Zip Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>